--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
+    "@element-plus/icons-vue": "^1.0.0",
     "autoprefixer": "^10.4.2",
+    "element-plus": "^2.0.3",
+    "less": "^4.1.2",
     "nuxt3": "^3.0.0-27428764.271289c",
     "postcss": "^8.4.7",
     "tailwind-config-viewer": "^1.6.3",
     "tailwindcss": "^3.0.23",
     "unplugin-icons": "^0.13.2",
-    "unplugin-vue-components": "^0.17.18",
-    "@element-plus/icons-vue": "^1.0.0",
-    "element-plus": "^2.0.3",
-    "less": "^4.1.2"
+    "unplugin-vue-components": "^0.17.18"
+  },
+  "dependencies": {
+    "highlight.js": "^11.4.0"
   }
 }
