--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
     "dev": "nuxi dev",
     "build": "nuxi build",
     "tw": "nuxi dev -o & tailwind-config-viewer -o -p 4000",
-    "start": "node .output/server/index.mjs"
+    "start": "node .output/server/index.mjs",
+    "format": "prettier --write \"./**/*.ts\" \"./**/*.vue\""
   },
   "devDependencies": {
     "@element-plus/icons-vue": "^1.0.0",
     "autoprefixer": "^10.4.2",
     "element-plus": "^2.0.3",
     "less": "^4.1.2",
+    "nuxt-windicss": "^2.2.8",
     "nuxt3": "^3.0.0-27428764.271289c",
     "postcss": "^8.4.7",
-    "tailwind-config-viewer": "^1.6.3",
-    "tailwindcss": "^3.0.23",
+    "prettier": "^2.5.1",
     "unplugin-icons": "^0.13.2",
     "unplugin-vue-components": "^0.17.18"
   },
