--- a/package.json
+++ b/package.json
@@ -3,21 +3,19 @@
   "scripts": {
     "dev": "nuxi dev",
     "build": "nuxi build",
-    "tw": "nuxi dev -o & tailwind-config-viewer -o -p 4000",
-    "start": "node .output/server/index.mjs"
+    "start": "node .output/server/index.mjs",
+    "format": "prettier --trailing-comma es5 --single-quote --write '**/*.{ts,vue,json}'"
   },
   "devDependencies": {
     "@element-plus/icons-vue": "^1.0.0",
     "autoprefixer": "^10.4.2",
     "element-plus": "^2.0.3",
     "less": "^4.1.2",
-    "nuxt-windicss": "^2.2.8",
     "nuxt3": "^3.0.0-27428764.271289c",
     "postcss": "^8.4.7",
     "postcss-pxtorem": "^6.0.0",
+    "prettier": "^2.6.0",
     "px2rem-loader": "^0.1.9",
-    "tailwind-config-viewer": "^1.6.3",
-    "unplugin-icons": "^0.13.2",
     "unplugin-vue-components": "^0.17.18"
   },
   "dependencies": {
