更新插件文档

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@m7s/ui"
   ],
   "scripts": {
+    "copy": "node scripts/copy-readme.js",
     "dev": "turbo run dev",
     "build": "turbo run build",
     "deploy": "turbo run build --scope=m7s-website --includeDependencies --no-deps"
