--- a/apps/m7s-website/tsconfig.json
+++ b/apps/m7s-website/tsconfig.json
@@ -6,6 +6,7 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "allowJs": true,
+    "jsx": "preserve",
     "strict": true,
     "baseUrl": ".",
     "paths": {
