--- a/apps/m7s-website/package.json
+++ b/apps/m7s-website/package.json
@@ -17,7 +17,11 @@
     "dynamics.js": "^1.1.5",
     "gsap": "^3.9.0",
     "highlight.js": "^11.5.0",
-    "vitepress": "0.22.2",
+    "markdown-it-mermaid": "^0.2.5",
+    "markdown-it-mermaid-plugin": "^0.1.0",
+    "terser": "^5.16.1",
+    "vitepress": "1.0.0-alpha.36",
+    "vitepress-plugin-mermaid": "^2.0.8",
     "vue": "^3.2.31"
   },
   "devDependencies": {
