--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -50,7 +50,7 @@
     "@types/estree": "^0.0.48",
     "prettier": "^2.4.1",
     "typescript": "~4.3.5",
-    "vitepress": "^0.20.9",
+    "vitepress": "1.0.0-alpha.36",
     "vue": "^3.2.26"
   }
 }
